index.css
/* ... */
.header nav {
  position: sticky;
  z-index: 33;
  top: 20px;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 89px;
  margin: 0 auto;
  border-bottom: 6px solid #323746;
  background: #2d303a;
  text-transform: uppercase;
  font-family: 'Lato Bold', sans-serif;
  letter-spacing: -0.3px;
}

.logo {
  margin-left: 40px;
  color: #fff;
  font-size: 25px;
  line-height: 25px;
}

.logo__text:hover .logo__span-star {
  color: #fff;
}

.logo__span-star {
  margin-left: -5px;
  color: #e66962;
  transition: ease color 0.3s;
}

.logo-m {
  position: absolute;
  left: 70px;
  top: 40px;
  display: none;
  color: #fff;
  font-size: 25px;
  line-height: 25px;
}

.logo-m__text {
  color: #fff;
}

.logo-m__span-star {
  margin-left: -5px;
  color: #e66962;
  transition: ease color 0.3s;
}

.nav {
  margin-right: 40px;
}

.nav__list {
  margin-top: 20px;
}

.nav__item {
  margin-left: 28px;
  display: inline;
  position: relative;
}

.nav__item:not(:first-child)::before {
  content: '';
  background: #494e62;
  border-radius: 50%;
  position: absolute;
  left: -16px;
  top: 12px;
  width: 3px;
  height: 3px;
}

.nav__link {
  font-size: 12px;
}

.nav__link-active,
a:hover {
  color: #f06c64;
}

#mobileNavBtn {
  padding: 0;
  margin: 0;
  display: none;
  transform: rotate(90deg);
  transition: 0.3s ease;
  background: transparent;
  border: none;
  position: absolute;
  top: 18px;
  left: 22px;
  z-index: 300;
}

.mobileNavBtn-active {
  transform: rotate(0deg) !important;
}

/*              SLIDER      */

.slider {
  min-height: 500px;
  position: relative;
  border-bottom: 6px solid #ea676b;
  display: flex;
}

.slider__nav {
  z-index: 3;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
}

.slider__nav button {
  cursor: pointer;
  border: 0;
  width: 16px;
  height: 27px;
  transition: ease 0.3s;
}

.slider__nav button:hover {
  opacity: 0.5;
}

.slider__nav button:active {
  opacity: 0.8;
}

.arrow-prev {
  background: transparent url(./assets/img/prev.png);
  position: absolute;
  top: 0;
  left: 42px;
}

.arrow-next {
  background: transparent url(./assets/img/next.png);
  position: absolute;
  top: 0;
  right: 42px;
}

.slide-1 {
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.3s ease-in-out;
  overflow: hidden;
  width: 100%;
  background: #f06c64;
}

.iphoneVerticalContainer {
  position: relative;
  display: inline-block;
}

.iphoneHorizontalContainer {
  position: relative;
  display: inline-block;
}

.slide__img-v {
  margin-right: 73px;
}

.slide-1-v-btn {
  border-radius: 50%;
  position: absolute;
  bottom: 33px;
  left: 87px;
  content: " ";
  width: 40px;
  height: 40px;
}

.slide-1-v-screen {
  transition: 0.3s ease;
  position: absolute;
  left: 14px;
  top: 65px;
  content: " ";
  width: 188px;
  height: 333px;
  opacity: 0;
  background: #000;
}

.slide-1-h-btn {
  border-radius: 50%;
  position: absolute;
  top: 87px;
  left: 8px;
  content: " ";
  width: 40px;
  height: 40px;
}

.slide-1-h-screen {
  transition: 0.3s ease;
  position: absolute;
  left: 60px;
  top: 14px;
  content: " ";
  width: 333px;
  height: 188px;
  opacity: 0;
  background: #000;
}

.slide-2-v-btn {
  border-radius: 50%;
  position: absolute;
  bottom: 35px;
  left: 92px;
  content: " ";
  width: 40px;
  height: 40px;
}

.slide-2-v-screen {
  transition: 0.3s ease;
  position: absolute;
  left: 15px;
  top: 69px;
  content: " ";
  width: 200px;
  height: 354px;
  opacity: 0;
  background: #000;
}



.slide-2 {
  transition: 0.3s ease-in-out;
  overflow: hidden;
  width: 0;
  background: #648BF0;
  display: flex;
  justify-content: center;
  align-items: center;

}

.slide-2__img-l {
  margin-right: -25px;
}

.slide-2__img-c {
  z-index: 2;
}

.slide-2__img-r {
  z-index: 1;
  margin-left: -26px;
}

.slider {
  height: 594px;
  overflow: hidden;
}


/*        Services        */

.services {
  max-width: 1020px;
  box-sizing: border-box;
  padding-right: 40px;
  padding-left: 40px;
  background: #f2f2f2;
  padding-top: 60px;
  padding-bottom: 30px;
  border-bottom: 6px solid #fff;
}

.services__title {
  color: #666d89;
}

.services__text {
  line-height: 30px;
  margin-top: 17px;
  max-width: 940px;
  font-family: "Lato Light";
  font-size: 18px;
  color: #767e9e;
  letter-spacing: 0px;
  text-align: justify;
}


.services__main {
  margin-top: 48px;
  max-width: 1020px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: top;
}

.service {
  margin-bottom: 32px;
}

.service__icon {
  cursor: pointer;
  position: relative;
  box-sizing: border-box;
  margin-right: 20px;
  margin-bottom: 30px;
  float: left;
  width: 59px;
  height: 59px;
  border: 2px solid #666d89;
  border-radius: 50%;
  transition: ease 0.6s;
}

.service__icon object {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.service__title {
  letter-spacing: -0.02px;
  white-space: nowrap;
  margin-top: -5px;
  margin-bottom: 7px;
  font-family: "Lato Black";
  font-size: 18px;
  color: #666d89;
  overflow: hidden;
  width: 220px;
}

.service__text {
  margin-top: 4px;
  text-align: justify;
  max-height: 65px;
  word-wrap: break-word;
  font-family: "Lato Regular";
  font-size: 12px;
  line-height: 22px;
  color: #767e9e;
  overflow: hidden;
  width: 220px;
}

.service__icon:hover {
  background: rgb(188, 192, 209);
}


/*      portfolio     */


.portfolio {
  max-width: 1020px;
  box-sizing: border-box;
  padding-right: 40px;
  padding-left: 40px;
  background: #2d303a;
  padding-top: 60px;
}

.portfolio__title {
  color: #666d89;
}

.portfolio__text {
  color: #666d89;
  line-height: 30px;
  margin-top: 17px;
  max-width: 940px;
  font-family: "Lato Light";
  font-size: 18px;
  letter-spacing: 0px;
  text-align: justify;
}

.portfolio__nav {
  margin-top: 10px;
  margin-left: 40px;
}
/* ... */

